# universal-protocol-bridge

./: README.md
.github/: CODEOWNERS
adapter/: Makefile  README.md
adapter/core/inc/: device.hpp
adapter/core/inc/common/: queue.hpp
adapter/core/src/: main.cpp
adapter/core/src/common/: queue.cpp
adapter/devices/st/stm32f303vct6/core/Inc/: board.h  stm32f3xx_it.h  system_init.h
adapter/devices/st/stm32f303vct6/core/Inc/usb/: usb_device.h  usbd_conf.h
adapter/devices/st/stm32f303vct6/core/Src/: board.c  device_stm32f3xx.cpp  hal_callbacks.cpp  stm32f3xx_hal_msp.c  stm32f3xx_it.c  system_init.c
adapter/devices/st/stm32f303vct6/core/Src/usb/: usb_device.c  usbd_cdc_if.c
desktop/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
